fixed navbar blocking stuff on small screens and made signin page nice

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,3 +1,7 @@
 #roo-icon{
 	padding: 12px 8px;
 }
+
+@media (max-width: 768px){
+	body{ margin-top:224px;}
+}
